--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,7 +3,7 @@
   </head>
   <body>
     <div>
-      <a href="./stocks">Stocks</a>
+      <a href="./login">Login</a>
     </div>
   </body>
 </html>
